# raycast-scripts

steve-jobs/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  local.env.template  main.py  pyproject.toml  requirements.txt
steve-jobs/src/: main.py
